// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons/Placeholder Default smoke-test 1`] = `
<svg viewbox="0 0 24 24"
     fill="currentColor"
     width="1em"
     height="1em"
     aria-label="Placeholder icon"
     role="img"
>
  <path d="M4 4h16v16H4z">
  </path>
</svg>
`;

exports[`Icons/Placeholder Large smoke-test 1`] = `
<svg viewbox="0 0 24 24"
     fill="currentColor"
     width="1em"
     height="1em"
     aria-label="Placeholder icon"
     role="img"
     style="font-size: 3rem;"
>
  <path d="M4 4h16v16H4z">
  </path>
</svg>
`;
